# check_ergodic_pbc_C3_fer

./: CMakeLists.txt  README.md  check_matrices_sparcity.py  exec_checking_U.py  gen_check_dipole.py  gen_data2csv_dipole.py  gen_different_init_paths.py  launch_one_run_U.py  mk_dir.py  plt_around.py  plt_vertices.py  rot_C4_H.py  sum_rot_H.py
data2csv/: pkl_dipole_data2csv.py
init_run_scripts/: load_previous_data.py  parseConf.py  search_and_read_summary_U.py  search_and_read_summary_dipole.py
mc_subroutine/: mc_read_load_compute.cpp  mc_read_load_compute.hpp
separate_pltLattice/: load_csv_one_T_one_path_dipole.py  oneT_one_path_lattice_dipole.py
